--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-admin",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "license": "MIT",
   "scripts": {
@@ -29,6 +29,7 @@
     "rc-resize-observer": "^1.2.1",
     "react": "^18.2.0",
     "react-activation": "^0.12.2",
+    "react-canvas-nest": "^1.1.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
     "react-redux": "^8.0.5",
@@ -37,8 +38,7 @@
     "react-router-dom": "6.7.0",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.7",
-    "style-resources-loader": "^1.5.0",
-    "unocss": "^0.51.12"
+    "style-resources-loader": "^1.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
@@ -59,6 +59,7 @@
     "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-react-swc": "^3.3.0",
+    "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "eslint-plugin-react": "^7.31.0",
@@ -67,9 +68,6 @@
     "husky": "^8.0.1",
     "jsdom": "^20.0.3",
     "less": "^4.1.3",
-    "postcss": "^8.4.19",
-    "postcss-html": "^1.5.0",
-    "postcss-less": "^6.0.0",
     "prettier": "^2.8.8",
     "rc-picker": "^2.6.10",
     "rollup-plugin-external-globals": "^0.7.1",
