--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,53 @@
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
-    "skipLibCheck": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noUnusedLocals": true, // 有未使用的变量时，抛出错误
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": ".",
-    "types": [
-      "vite/client",
-      "vite-plugin-pages/client-react",
-      "node"
+    "compilerOptions": {
+        "target": "ESNext",
+        "useDefineForClassFields": true,
+        "lib": [
+            "DOM",
+            "DOM.Iterable",
+            "ESNext"
+        ],
+        "allowJs": false,
+        "skipLibCheck": true,
+        "esModuleInterop": false,
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
+        "module": "ESNext",
+        "moduleResolution": "Node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noUnusedLocals": true, // 有未使用的变量时，抛出错误
+        "noEmit": true,
+        "jsx": "react-jsx",
+        "baseUrl": ".",
+        "types": [
+            "vite/client",
+            "vite-plugin-pages/client-react",
+            "node"
+        ],
+        "paths": {
+            "@/*": [
+                "src/*"
+            ],
+            "#/*": [
+                "types/*"
+            ]
+        }
+    },
+    "include": [
+        "src",
+        "tests",
+        "types"
     ],
-    "paths": {
-      "@/*": ["src/*"],
-      "#/*": ["types/*"]
-    }
-  },
-  "include": ["src", "tests", "types"],
-  "exclude": ["dist", "node_modules", "cypress"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+    "exclude": [
+        "dist",
+        "node_modules",
+        "cypress"
+    ],
+    "references": [
+        {
+            "path": "./tsconfig.node.json"
+        }
+    ]
 }
